--- a/layouts/note/single.html
+++ b/layouts/note/single.html
@@ -1,6 +1,6 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
-<main id="content" class="notes">
+<main id="content" class="note">
   {{ partial "note" . }}
 </main>
 {{ end }}
