--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,6 +1,8 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
+<main id="content" class="post">
   <p class="post-date">{{ .PublishDate | time.Format "02 Jan 2006" }}</p>
   <h2 class="post-title">{{ .Title | safeHTML }}</h2>
   {{ .Content }}
+</main>
 {{ end }}
