--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
   <link rel="me" href="https://instagram.com/indirect">
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
-  {{- hugo.Store.Set "drafts" (eq .Site.BaseURL "https://drafts.arko.net") }}
+  {{- hugo.Store.Set "drafts" (eq .Site.BaseURL "https://drafts.arko.net/") }}
 </head>
 <body>
   <header id="header">
